# bmi-calculator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/language-switcher/: index.tsx
web/src/i18n/: index.ts
web/src/i18n/locales/: en-GB.json  zh-CN.json
web/src/page/home/: index.tsx
web/src/router/: index.tsx
web/src/store/: index.ts
